# rocon_tools

./: .gitignore  README.md  rocon_tools.rosinstall
rocon_bubble_icons/: .gitignore  CHANGELOG.rst  package.xml
rocon_console/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_console/doc/: colouring.rst
rocon_console/src/rocon_console/: __init__.py  console.py
rocon_ebnf/: CHANGELOG.rst  package.xml
rocon_ebnf/doc/: index.rst
rocon_ebnf/src/rocon_ebnf/: rule_parser.py
rocon_ebnf/tests/: test_rule_parser.py
rocon_icons/: CHANGELOG.rst  package.xml
rocon_icons/doc/: index.rst
rocon_interactions/: .project  CHANGELOG.rst  CMakeLists.txt  Makefile  package.xml
rocon_interactions/doc/: CHANGELOG.rst  conf.py  index.rst  modules.rst  overview.rst  rocon_interactions.rst  rosapi.rst  specification.rst
rocon_interactions/interactions/: android.interactions  binding.interactions  pairing.interactions  pc.interactions  web.interactions  web_apps.interactions
rocon_interactions/js/: interactions.js
rocon_interactions/launch/: android_demo.launch  concert_interactions.launch  demo.launch  interactions.launch  loading_demo.launch  mock_example.launch  pairing_demo.launch  pc_demo.launch  pc_interactions.launch  rviz.launch  tutorial.launch  web_app_interactions.launch
rocon_interactions/launch/remocon/: rviz.launch
rocon_interactions/scripts/: fake_remocon  interactions_manager.py  load_interactions  qt_listener.py  rocon_interactions  tutorial_markers.py
rocon_interactions/src/rocon_interactions/: __init__.py  exceptions.py  interactions.py  interactions_table.py  loader.py  manager.py  pairings.py  pairings_table.py  rapp_handler.py  rapp_watcher.py  remocon_monitor.py  ros_parameters.py  utils.py  web_interactions.py
rocon_interactions/tests/nose/: test_interactions.py
rocon_interactions/tests/ros/fake_remocon/: fake_remocon.test
rocon_interactions/tests/ros/loader/: loader.test  test_loader.py
rocon_interactions/yaml/: android.interactions  example.interactions  pc.interactions  qt.interactions  ros.interactions  tutorial.interactions  web.interactions  web_apps.interactions
rocon_launch/: CHANGELOG.rst  package.xml
rocon_launch/concert/: multi-master.concert  single-master.concert
rocon_launch/doc/: index.rst  manifest.yaml  modules.rst  xml.rst
rocon_launch/src/rocon_launch/: __init__.py  exceptions.py  launch.py  roslaunch_configuration.py  terminals.py  utils.py
rocon_master_info/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_master_info/doc/: index.rst
rocon_master_info/launch/: rocon_master.launch  rocon_master_info.launch
rocon_master_info/scripts/: master_info  rocon_master_info
rocon_master_info/src/rocon_master_info/: __init__.py  master.py  master_info.py
rocon_python_comms/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_python_comms/doc/: conf.py  index.rst  modules.rst
rocon_python_comms/env-hooks/: 15.rospair.bash.em  15.rospair.tcsh.em  15.rospair.zsh.em
rocon_python_comms/launch/: connection_cache.launch
rocon_python_comms/scripts/: connection_cache  connection_cache.py  rospair
rocon_python_comms/src/rocon_python_comms/: __init__.py  connections.py  connections_proxy.py  exceptions.py  find_node.py  master.py  namespace.py  nodes.py  service_pair_client.py  service_pair_server.py  services.py  subscriber_proxy.py  topics.py  utils.py  wall_rate.py
rocon_python_comms/tests/: CMakeLists.txt
rocon_python_comms/tests/connection_cache/: connection_cache.test  connection_cache_node.test  test_connection_cache.py  test_connection_cache_node.py
rocon_python_comms/tests/nosetests/: test_names.py
rocon_python_comms/tests/quick_call/: quick_call_server.py  test_quick_call_client.py
rocon_python_comms/tests/rostests/: CMakeLists.txt
rocon_python_comms/tests/rostests/connection_cache/: connection_cache_node.test  profile_connection_cache.py  test_connection_cache.py  test_connection_cache_node.py  test_connection_cache_node_actions.py
rocon_python_comms/tests/rostests/service_pair_timeouts/: test_service_pair_timeouts.py
rocon_python_comms/tests/rostests/utils/: test_utils.py
rocon_python_comms/tests/service_pair_timeouts/: test_service_pair_timeouts.py
rocon_python_comms/tests/subscriber_proxy/: subscriber_proxy.py
rocon_python_redis/: CHANGELOG.rst  README.md  package.xml
rocon_python_redis/doc/: index.rst
rocon_python_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_python_utils/doc/: .gitignore  index.rst  modules.rst
rocon_python_utils/scripts/: image_converter
rocon_python_utils/src/rocon_python_utils/: __init__.py  catkin.py  exceptions.py  iterables.py  ros.py
rocon_python_utils/src/rocon_python_utils/network/: pinger.py
rocon_python_utils/src/rocon_python_utils/ros/: __init__.py  catkin.py  fileio.py  icons.py  paths.py  resources.py
rocon_python_utils/src/rocon_python_utils/system/: command_line_wrappers.py  pid.py  popen.py
rocon_python_utils/tests/nose/: test_iterables.py
rocon_python_wifi/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rocon_python_wifi/doc/: index.rst  package_details.rst
rocon_python_wifi/src/rocon_python_wifi/: iwlibs.py
rocon_semantic_version/: CHANGELOG.rst  Readme.md  package.xml
rocon_semantic_version/doc/: index.rst
rocon_tools/: CHANGELOG.rst  package.xml
rocon_uri/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rocon_uri/doc/: conf.py  index.rst  manifest.yaml  modules.rst  rocon_uri.rst  rules.rst  specification.rst  usage.rst
rocon_uri/scripts/: rocon_uri  view_rules
rocon_uri/src/rocon_uri/: __init__.py  exceptions.py  platform.py  rules.py  uri.py
rocon_uri/src/rocon_uri/ebnf_parser/: sqs1.py  sqs2.py
rocon_uri/src/rocon_uri/rule_parser/: __init__.py  rp.py
rocon_uri/src/rocon_uri/rules/: rules.yaml
rocon_uri/tests/: CMakeLists.txt  test_rocon_uri.py
rocon_uri/tests/unit/: test_rocon_uri.py  test_rule_parser.py
rocon_uri/yaml/: rules.yaml
