<package>
  <name>rocon_python_redis</name>
  <version>0.1.3</version>
  <description>
    Locally patched version of the python redis client.  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_python_redis</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tools</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tools/issues</url>
  <author>Andy McCurdy</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
