<?xml version="1.0"?>
<package>
  <name>rocon_tools</name>
  <version>0.1.0</version>
  <description>
    Utilities and tools developed for rocon, but usable beyond the boundaries
    of rocon.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_tools</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_tools</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_tools/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

